--- a/index.html
+++ b/index.html
@@ -622,9 +622,8 @@
             влияние на их дальнейшую жизнь.
           </p>
           <button type="button" class="about_btn">Читать подробней</button>
-          <video controls preload="auto" class="about__video"  poster="./video/fotobaigak.jpg" src="/video/videobaikal.mp4"> 
-            <source src="./video/videobaikal.mp4" type="video/videobaikal.mp4">
-            <source src="./video/videobaikal.webm.webm" type="video/videobaikal.webm.webm"></video>
+          <video controls preload="auto" class="about__video"  poster="./images/fotobaigak.jpg" src="./video/videobaikal.webm"> 
+           </video>
         </div>
       </section>
       <section class="gallery">
