--- a/index.html
+++ b/index.html
@@ -622,8 +622,10 @@
             влияние на их дальнейшую жизнь.
           </p>
           <button type="button" class="about_btn">Читать подробней</button>
-          <video controls preload="auto" class="about__video"  poster="./images/fotobaigak.jpg" src="./video/videobaikal.webm"> 
-           </video>
+          <video controls preload="auto" class="about__video" src="./video/baikalvideo1.mp4" poster="./images/fotobaigak.jpg"> 
+          <source src="./video/baikalvideo1.mp4" type="baikalvideo1.mp4"> 
+         <source src="./video/videobaikal.webm" type="videobaikal.webm">  
+        </video>
         </div>
       </section>
       <section class="gallery">
