--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
           </p>
 
           <a href="#" class="hero__link">подобрать тур</a>
-          <a href="#" class="hero__icon"></a>
+          <a href="#" class="hero__icon"><svg width="13" height="6,4">
+            <use href="./images/symbol-defs.svg#iconbottom"></use>
+          </svg></a>
         </div>
       </section>
       <section class="categories">
