--- a/index.html
+++ b/index.html
@@ -736,25 +736,23 @@
       <section class="features">
         <div class="conteiner">
         <h2 class="features__title is-hidden">о нас</h2>
-        <ul>
-          
-          <li>
-            <p>7 лет успешной работы</p>
+        <ul class="features__list">
+          <li class="features__item">
+            <p class="features__text features__text--age"><span class="features__number">7</span> лет успешной работы</p>
           </li>
-          
-          <li>
-            <p>250+ отелей на Байкале</p>
+          <li class="features__item">
+            <p class="features__text features__text--hotel"><span class="features__number">250+ </span>отелей на Байкале</p>
           </li>
-          <li>
-            <p>100+ различных туров</p>
+          <li class="features__item">
+            <p class="features__text features__text--tour"><span class="features__number">100+</span>различных туров</p>
           </li>
-          <li>
-            <p>
-              32 000 кв. км – площадь на которой мы организовываем путешествия
+          <li class="features__item">
+            <p class="features__text">
+              <span class="features__number">32 000</span> кв. км – площадь на которой мы организовываем путешествия
             </p>
           </li>
-          <li>
-            <p>50 000 довольных туристов от 3 до 85 лет</p>
+          <li class="features__item">
+            <p class="features__text"><span class="features__number">50 000</span> довольных туристов от 3 до 85 лет</p>
           </li>
         </ul>
         </div>
