--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
             <p class="features__text features__text--tour"><span class="features__number">100+</span>различных туров</p>
           </li>
           <li class="features__item">
-            <p class="features__text">
+            <p class="features__text features__text--metr">
               <span class="features__number">32 000</span> кв. км – площадь на которой мы организовываем путешествия
             </p>
           </li>
