--- a/index.html
+++ b/index.html
@@ -758,7 +758,17 @@
         </div>
       </section>
       <section class="form">
-        <h2>Забронируйте отдых на Байкале</h2>
+        <div class="conteiner">
+        <h2 class="form__title">Забронируйте отдых на Байкале</h2>
+        <form class="form__block">
+          <label for="text"></label>
+          <input type="text" id="text" name="text" placeholder="Ваше имя" class="form__input">
+          <label for="number"></label>
+          <input type="tel" id="number" name="number" placeholder="Телефон" class="form__input">
+          <label for="use-email"></label>
+          <input type="email" name="use-email" id="use-email" placeholder="E-mail" class="form__input">
+        </form>
+        </div>
       </section>
     </main>
     <footer class="footer">
