--- a/index.html
+++ b/index.html
@@ -782,9 +782,10 @@
           <input type="date" name="date" id="date" class="form__date"></div></div>
          <textarea name="coments" rows="10" class="form__textarea" placeholder="Комментарий"></textarea>
           <div class="form__chek">
-            <input type="checkbox" name="checkbox" id="checkbox"> <span class="form__box"></span>
-          <label for="checkbox">Согласие на обработку персональных данных</label></div>
+          <label for="checkbox" class="Form__text"><input type="checkbox" name="checkbox" id="checkbox" class="form__chekhidden">
+            <span class="form__box"></span>Согласие на обработку персональных данных</label></div>
         </form>
+        <button type="submit" class="form__btn">Отправить заявку</button>
         </div>
       </section>
     </main>
