--- a/index.html
+++ b/index.html
@@ -618,12 +618,14 @@
             свойствами. Именно здесь пронзительные чувства и скрытые способности
             человека находят выплеск.
           </p>
+          <input type="checkbox" name="" id="">
           <p class="about__text">
             Познается что-то новое не только в природе, но и в самом себе.
             Многие посетившие Байкал люди утверждают, что озеро оказало большое
             влияние на их дальнейшую жизнь.
           </p>
-          <button type="button" class="about_btn">Читать подробней</button>
+          <label for="" class="about_btn">Читать подробней</label>
+          
           <video controls preload="auto" class="about__video" src="./video/baikalvideo1.mp4" poster="./images/fotobaigak.jpg"> 
           <source src="./video/baikalvideo1.mp4" type="baikalvideo1.mp4"> 
          <source src="./video/videobaikal.webm" type="videobaikal.webm">  
