--- a/index.html
+++ b/index.html
@@ -618,13 +618,16 @@
             свойствами. Именно здесь пронзительные чувства и скрытые способности
             человека находят выплеск.
           </p>
-          <input type="checkbox" name="" id="">
-          <p class="about__text">
+          <input type="checkbox" name="about__chekbox" id="about__chekbox" class="about__chekbox">
+          <p class="about__text about__text-checked">
             Познается что-то новое не только в природе, но и в самом себе.
             Многие посетившие Байкал люди утверждают, что озеро оказало большое
             влияние на их дальнейшую жизнь.
           </p>
-          <label for="" class="about_btn">Читать подробней</label>
+          <label for="about__chekbox" class="about__label">
+            <span class="about__btn">Читать подробней</span>
+            <span class="about__btn2">скрыть</span>
+          </label>
           
           <video controls preload="auto" class="about__video" src="./video/baikalvideo1.mp4" poster="./images/fotobaigak.jpg"> 
           <source src="./video/baikalvideo1.mp4" type="baikalvideo1.mp4"> 
