--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
           <li class="features__item">
             <p class="features__text features__text--hotel"><span class="features__number">250+ </span>отелей на Байкале</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features__item-margin">
             <p class="features__text features__text--tour"><span class="features__number">100+</span>различных туров</p>
           </li>
           <li class="features__item">
