--- a/index.html
+++ b/index.html
@@ -862,6 +862,16 @@
             <a href="">Дизайн<img src="./images/Vector.svg" alt="logo" /></a>
           </div>
         </div>
+        <div class="menu">
+          <button class="menu__btn"><svg width="32" height="24" class="menu__icon">
+            <use href="./images/symbol-defs.svg#icontelmenu"></use>
+          </svg></button>
+          <a href="#" class="menu__link">Меню</a>
+        </div>
+        <p class="menu__text">Турагентство «Байкальский отдых»</p>
+          <small class="menu__small">&copy; 2021. Все права защищены</small>
+           <a href="#" class="menu__link2">Политика конфиденциальности</a>
+            <a href="#" class="menu__design">Дизайн<img class="menu__img" src="./images/logo2.svg" alt="logo" /></a>
       </div>
     </footer>
   </body>
