--- a/index.html
+++ b/index.html
@@ -788,7 +788,8 @@
          <textarea name="coments" rows="10" class="form__textarea" placeholder="Комментарий"></textarea>
           <div class="form__chek">
           <label for="checkbox" class="Form__text"><input type="checkbox" name="checkbox" id="checkbox" class="form__chekhidden">
-            <span class="form__box"></span>Согласие на обработку персональных данных</label></div>
+            <span class="form__box"></span>
+           <span class="form__span">Согласие на обработку персональных данных</span></label></div>
             <button type="submit" class="form__btn">Отправить заявку</button>
         </form>
         </div>
