--- a/index.html
+++ b/index.html
@@ -696,7 +696,8 @@
         </ul>
       </section>
       <section class="invitation">
-        <div class="conteiner">
+        <div class="conteiner affter">
+          
         <h2 class="invitation__title">Байкальский отдых с нами – это легко!</h2>
         <div class="invitation__img-block">
         <img src="./images/images/images/пара чел.jpg" alt="пара чел" />
@@ -736,6 +737,7 @@
           волшебством. Развлекательную новогоднюю программу готовит почти каждая
           турбаза.
         </p>
+        
         </div>
       </section>
       <section class="features">
