--- a/index.html
+++ b/index.html
@@ -744,13 +744,13 @@
         <div class="conteiner">
         <h2 class="features__title is-hidden">о нас</h2>
         <ul class="features__list">
-          <li class="features__item">
+          <li class="features__item features__item--right">
             <p class="features__text features__text--age"><span class="features__number">7</span> лет успешной работы</p>
           </li>
           <li class="features__item">
             <p class="features__text features__text--hotel"><span class="features__number">250+ </span>отелей на Байкале</p>
           </li>
-          <li class="features__item features__item-margin">
+          <li class="features__item features__item--margin">
             <p class="features__text features__text--tour"><span class="features__number">100+</span>различных туров</p>
           </li>
           <li class="features__item">
