--- a/index.html
+++ b/index.html
@@ -837,20 +837,20 @@
               <li class="footer-item"><a href="" class="mobile__link">Контакты</a></li>
               <li class="footer-item"><a href="" class="mobile__link">Агентствам</a></li>
             </ul>
-            <address>
-              <p>Заказ туров и бронирование:</p>
-              <ul>
+            <address class="mobile__address">
+              <p class="mobile__text">Заказ туров и бронирование:</p>
+              <ul class="mobile__list">
                 <li>
-                  <a href="tel:+89243541540">тел. 8-924-3-541-540</a>
+                  <a href="tel:+89243541540" class="mobile__link">тел. 8-924-3-541-540</a>
                 </li>
                 <li>
                   <a href="mailto:baikalholiday@mail.ru"
-                    >e-mail: baikalholiday@mail.ru</a
+                    class="mobile__link">e-mail: baikalholiday@mail.ru</a
                   >
                 </li>
               </ul>
-              <p>Адрес:</p>
-              <p>г. Улан-Удэ, ул.Гражданская, 20, отель «Рестон», 1 этаж</p>
+              <p class="mobile__text">Адрес:</p>
+              <p class="mobile__text mobile__text-address">г. Улан-Удэ, ул.Гражданская, 20, отель «Рестон», 1 этаж</p>
             </address>
      </div>
     <footer class="footer">
