--- a/index.html
+++ b/index.html
@@ -669,10 +669,10 @@
         </div>
         <ul class="gallery__btn-list">
           <li class="gallery__btn-item"><button type="button" class="gallery__button"><svg width="6" height="12" class="gallery__icon">
-            <use href="./images/symbol-defs.svg#iconleft"></use>
+            <use href="./images/symbol-defs.svg#iconVectorleft"></use>
           </svg></button></li>
           <li class="gallery__btn-item"><button type="button" class="gallery__button"><svg width="6" height="12" class="gallery__icon">
-            <use href="./images/symbol-defs.svg#iconright"></use></button></li>
+            <use href="./images/symbol-defs.svg#iconVectorright"></use></button></li>
         </ul>
         </div>
         <ul class="gallery__img-list">
