--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </nav>
       </div>
     </header>
+    <!-- MObileheader-menu -->
     <div class="head-mobile__menu js-container-mobile">
       <button class="head-mobile__btn js-close-Btn"><svg width="32" height="24" class="head-mobile__icon">
         <use href="./images/symbol-defs.svg#iconmenuX"></use>
@@ -90,9 +91,15 @@
             </li>
           </ul>
           <ul class="head-mobile__contacts">
-          <li class="head-mobile__item"><a href="tel:89243541540" class="head-mobile__link">8-924-3-541-540</a></li>
           <li class="head-mobile__item">
-            <a href="mailto:baikalholiday@mail.ru" class="head-mobile__link">baikalholiday@mail.ru</a>
+            <a href="tel:89243541540" class="head-mobile__link head-mobile__link-phoneMail"><svg width="24" height="24" class="head-mobile__svg">
+              <use href="./images/symbol-defs.svg#iconphonehead"></use>
+            </svg>8-924-3-541-540</a>
+          </li>
+          <li class="head-mobile__item">
+            <a href="mailto:baikalholiday@mail.ru" class="head-mobile__link head-mobile__link-phoneMail"><svg width="24" height="24" class="head-mobile__svg">
+              <use href="./images/symbol-defs.svg#iconmailhead"></use>
+            </svg>baikalholiday@mail.ru</a>
           </li>
         </ul>
         <button type="button" class="head-mobile__button">
