--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- <script src="./js/mobile-menu.js"></script> -->
     <!--🤞Header Logo✌️-->
     <header class="page-header page-header__after">
-      <div class="conteiner">
+      <div class="conteiner conteiner__flex">
         <div class="page-header__block">
-          <a href="" class="logo"><img src="./images/logo.svg" alt="" /></a>
+          <a href="" class="logo"><img class="logo__img" src="./images/logo.svg" alt="" /></a>
           <div class="logo__block">
             <p class="logo__text">Байкальский отдых</p>
             <p class="logo__text2">Турагентство</p>
@@ -47,7 +47,7 @@
         <button type="button" class="page-header__button">
           Обратный звонок
         </button>
-        <nav class="page-nav">
+        <nav class="page__nav">
           <ul class="page-nav__list">
             <li class="page-nav__item">
               <a href="#" class="page-nav__link">Бронирование</a>
