--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <h2 class="categories__title visually-hidden">подобрать тур</h2>
           <ul class="categories__card">
             <li class="categories__item">
-              <a href="#">
-                <img
+              <a href="#" class="categories__link">
+                <img class="categories__img"
                   srcset="
                     ./images/greanhome.jpg    1x,
                     ./images/greanhome@2x.jpg 2x,
@@ -144,7 +144,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/statuetkalva.jpg    1x,
                     ./images/statuetkalva@2x.jpg 2x,
@@ -161,7 +161,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/fish.jpg    1x,
                     ./images/fish@2x.jpg 2x,
@@ -178,7 +178,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/ekstrimturi.jpg    1x,
                     ./images/ekstrimturi@2x.jpg 2x,
@@ -195,7 +195,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/iaxta.jpg    1x,
                     ./images/iaxta@2x.jpg 2x,
@@ -212,7 +212,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/krasotibaikala.jpg    1x,
                     ./images/krasotibaikala@2x.jpg 2x,
@@ -229,7 +229,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/hotelulanude.jpg    1x,
                     ./images/hotelulanude@2x.jpg 2x,
@@ -246,7 +246,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/transport.jpg    1x,
                     ./images/transport@2x.jpg 2x,
@@ -263,7 +263,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/delavoichelovek.jpg    1x,
                     ./images/delavoichelovek@2x.jpg 2x,
@@ -280,7 +280,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/kruizpobaikalu.jpg    1x,
                     ./images/kruizpobaikalu@2x.jpg 2x,
@@ -297,7 +297,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/wintertour.jpg    1x,
                     ./images/wintertour@2x.jpg 2x,
@@ -314,7 +314,7 @@
             </li>
             <li class="categories__item">
               <a href="#"
-                ><img
+                ><img class="categories__img"
                   srcset="
                     ./images/O-baikale.jpg    1x,
                     ./images/O-baikale@2x.jpg 2x,
