--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
           <ul class="directions__list">
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-37"></use></svg
               ></a>
               <p class="directions__text">
@@ -348,7 +348,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-38"></use></svg
               ></a>
               <p class="directions__text">
@@ -357,7 +357,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-39"></use></svg
               ></a>
               <p class="directions__text">
@@ -366,7 +366,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-40"></use></svg
               ></a>
               <p class="directions__text">
@@ -375,7 +375,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-41"></use></svg
               ></a>
               <p class="directions__text">
@@ -384,7 +384,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-42"></use></svg
               ></a>
               <p class="directions__text">
@@ -393,7 +393,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-626"></use></svg
               ></a>
               <p class="directions__text">
@@ -402,7 +402,7 @@
             </li>
             <li class="directions__item">
               <a href="" class="directions__link"
-                ><svg width="84" height="84">
+                ><svg width="84" height="84" class="directions__icon">
                   <use href="./images/symbol-defs.svg#iconGroup-44"></use></svg
               ></a>
               <p class="directions__text">
