--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </p>
 
           <a href="#" class="hero__link">подобрать тур</a>
-          <a href="#" class="hero__icon"><svg width="13" height="6">
+          <a href="#" class="hero__icon"><svg width="13" height="38">
             <use href="./images/symbol-defs.svg#iconGroup-10down"></use>
           </svg></a>
         </div>
@@ -624,8 +624,7 @@
                 <p class="suggestions__price">Стоимость 2000 руб.</p></div></div></a
               >
             </li>
-          </ul>
-            <div class="offer">
+            <li class="suggestions__item">   <div class="offer">
             <a href="" class="offer__link">
               <div class="offer__block">
               <img class="offer__img"
@@ -638,9 +637,11 @@
               </div>
               </div>
             </a>
-            </div>
+            </div></li>
+          </ul>
+         
           </div>
-        </div>
+        
       </section>
       <section class="map">
         <div class="conteiner">
